# AdinkraCoin

./: CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
build-aux/m4/: adinkracoin_find_bdb48.m4  adinkracoin_qt.m4  adinkracoin_subdir_to_include.m4
build_msvc/: README.md  adinkracoin.sln  adinkracoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
build_msvc/adinkracoin-cli/: adinkracoin-cli.vcxproj
build_msvc/adinkracoin-qt/: adinkracoin-qt.vcxproj
build_msvc/adinkracoin-tx/: adinkracoin-tx.vcxproj
build_msvc/adinkracoin-util/: adinkracoin-util.vcxproj
build_msvc/adinkracoin-wallet/: adinkracoin-wallet.vcxproj
build_msvc/adinkracoind/: adinkracoind.vcxproj
build_msvc/bench_adinkracoin/: bench_adinkracoin.vcxproj.in
build_msvc/libadinkracoin_qt/: libadinkracoin_qt.vcxproj
build_msvc/libadinkracoinconsensus/: libadinkracoinconsensus.vcxproj
build_msvc/test_adinkracoin/: test_adinkracoin.vcxproj
build_msvc/test_adinkracoin-qt/: test_adinkracoin-qt.vcxproj
build_msvc/testconsensus/: testconsensus.cpp
ci/: lint_run_all.sh  test_run_all.sh
ci/lint/: 04_install.sh  06_script.sh
contrib/: README.md  adinkracoin-cli.bash-completion  adinkracoin-tx.bash-completion  adinkracoind.bash-completion  filter-lcov.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/man/: Makefile.am  adinkracoin-cli.1  adinkracoin-qt.1  adinkracoin-tx.1  adinkracoin-util.1  adinkracoin-wallet.1  adinkracoind.1
test/: README.md
(+91 files in other folders)
