dist_man1_MANS=

if BUILD_ADINKRACOIND
  dist_man1_MANS+=adinkracoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=adinkracoin-qt.1
endif

if BUILD_ADINKRACOIN_CLI
  dist_man1_MANS+=adinkracoin-cli.1
endif

if BUILD_ADINKRACOIN_TX
  dist_man1_MANS+=adinkracoin-tx.1
endif

if BUILD_ADINKRACOIN_UTIL
  dist_man1_MANS+=adinkracoin-util.1
endif

if ENABLE_WALLET
if BUILD_ADINKRACOIN_WALLET
  dist_man1_MANS+=adinkracoin-wallet.1
endif
endif
